kustomize/overlay/staging/common-project-testing-staging-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: common-project-testing-staging
  labels:
    environmentId: env_28e0313c-7e56-4c3f-832c-99e620025894
    projectId: project_f9d8de1f-1e49-4d0a-8e49-657f15fd532b
    projectName: common-project-testing
    environmentName: staging
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
